<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="60dp"
        android:text="@string/app_name"
        android:textColor="#5f5f2f"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="100dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/transparent_button"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/start"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/buttonOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/transparent_button"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/options"
            android:textSize="25sp" />
    </LinearLayout>


</FrameLayout>