<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/transparent_button"
                android:orientation="vertical"
                android:padding="20dp" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Title_Particle_Number"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <CheckBox
                    android:id="@+id/checkBoxAuto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:includeFontPadding="false"
                    android:text="@string/auto_count" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/Hint_Particle_Number"
                    android:inputType="number"
                    android:maxLines="1" />

                <TextView
                    android:id="@+id/warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dip"
                    android:text="@string/warn_too_many_particles"
                    android:textColor="#FF0000"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/transparent_button"
                android:orientation="vertical"
                android:padding="20dp" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Title_Particle_Size"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <SeekBar
                        android:id="@+id/seekBar1"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:indeterminate="false"
                        android:max="90"
                        android:paddingLeft="20dip"
                        android:paddingRight="20dip" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="20dip"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:checked="true"
                    android:includeFontPadding="false"
                    android:text="@string/Motion_Blur" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:checked="true"
                    android:includeFontPadding="false"
                    android:text="@string/Show_Fps" />
            </LinearLayout>

            <TextView
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/transparent_button"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@android:string/ok"
                android:textSize="25sp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</FrameLayout>